force-app/main/default/objects/TimesheetEntry__c/TimesheetEntry__c.object-meta.xml
<CustomObject>
    <label>Timesheet Entry</label>
    <nameField>
        <displayFormat>TSE-{YYYY}-{00000}</displayFormat>
        <label>Timesheet Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>