force-app/main/default/objects/TimesheetEntry__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Assigned to this timesheet</description>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>