force-app/main/default/objects/TimesheetEntry__c/fields/FridayAM__c.field-meta.xml
<CustomField>
    <fullName>FridayAM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of morning Friday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Friday AM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>