force-app/main/default/objects/TimesheetEntry__c/fields/FridayDate__c.field-meta.xml
<CustomField>
    <fullName>FridayDate__c</fullName>
    <formula>MondayDate__c +4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friday Date</label>
    <type>Date</type>
</CustomField>