force-app/main/default/objects/TimesheetEntry__c/fields/FridayPM__c.field-meta.xml
<CustomField>
    <fullName>FridayPM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of afternoon Friday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Friday PM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>