force-app/main/default/objects/TimesheetEntry__c/fields/MondayAM__c.field-meta.xml
<CustomField>
    <fullName>MondayAM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of morning Monday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Monday AM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>