force-app/main/default/objects/TimesheetEntry__c/fields/MondayDate__c.field-meta.xml
<CustomField>
    <fullName>MondayDate__c</fullName>
    <description>Date of Monday of the Timesheet&#39;s week</description>
    <label>Monday Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>