force-app/main/default/objects/TimesheetEntry__c/fields/MondayPM__c.field-meta.xml
<CustomField>
    <fullName>MondayPM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of afternoon Monday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Monday PM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>