force-app/main/default/objects/TimesheetEntry__c/fields/ProjectStage__c.field-meta.xml
<CustomField>
    <fullName>ProjectStage__c</fullName>
    <formula>Assignment__r.ProjectStage__r.Name</formula>
    <label>Project stage</label>
    <type>Text</type>
</CustomField>