force-app/main/default/objects/TimesheetEntry__c/fields/ThursdayAM__c.field-meta.xml
<CustomField>
    <fullName>ThursdayAM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of morning Thusday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Thursday AM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>