force-app/main/default/objects/TimesheetEntry__c/fields/ThursdayPM__c.field-meta.xml
<CustomField>
    <fullName>ThursdayPM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of afternoon Thusday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Thursday PM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>