force-app/main/default/objects/TimesheetEntry__c/fields/TuesdayAM__c.field-meta.xml
<CustomField>
    <fullName>TuesdayAM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of morning Tuesday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Tuesday AM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>