force-app/main/default/objects/TimesheetEntry__c/fields/TuesdayPM__c.field-meta.xml
<CustomField>
    <fullName>TuesdayPM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of afternoon Tuesday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Tuesday PM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>