force-app/main/default/objects/TimesheetEntry__c/fields/WednesdayAM__c.field-meta.xml
<CustomField>
    <fullName>WednesdayAM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of morning wednesday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Wednesday AM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>