force-app/main/default/objects/TimesheetEntry__c/fields/WednesdayPM__c.field-meta.xml
<CustomField>
    <fullName>WednesdayPM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charge of afternoon Wednesday on the project associated to the assignment during the week of Timesheet.</description>
    <label>Wednesday PM</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>