force-app/main/default/objects/TimesheetEntry__c/fields/Week_Sum__c.field-meta.xml
<CustomField>
    <fullName>Week_Sum__c</fullName>
    <label>Week Sum</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>