force-app/main/default/objects/TimesheetEntry__c/validationRules/VR02_TSE_MondayDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_TSE_MondayDate</fullName>
    <active>true</active>
    <errorConditionFormula>WEEKDAY( MondayDate__c ) &lt;&gt; 2</errorConditionFormula>
    <errorDisplayField>MondayDate__c</errorDisplayField>
    <errorMessage>The date is not a Monday.</errorMessage>
</ValidationRule>