force-app/main/default/objects/TimesheetEntry__c/validationRules/VR03_TSE_LockApprovedTimesheetEntry.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_TSE_LockApprovedTimesheetEntry</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( TEXT(Status__c) = &#39;Accepted&#39;,!ISCHANGED(Status__c) )</errorConditionFormula>
    <errorMessage>This timesheet is already approved and can&#39;t be updated.</errorMessage>
</ValidationRule>