force-app/main/default/objects/TimesheetEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignee__c</columns>
    <columns>MondayDate__c</columns>
    <columns>Week_Sum__c</columns>
    <columns>Status__c</columns>
    <columns>Approver__c</columns>
    <columns>Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assignee__c</field>
        <operation>contains</operation>
        <value>Grelier</value>
    </filters>
    <label>All</label>
</ListView>