force-app/main/default/objects/TimesheetEntry__c/listViews/Timesheet_entries_to_approve.listView-meta.xml
<ListView>
    <fullName>Timesheet_entries_to_approve</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>Assignee__c</columns>
    <columns>ProjectStage__c</columns>
    <columns>Week_Sum__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submit For Approval</value>
    </filters>
    <label>Timesheet entries to approve</label>
</ListView>